# it-ticketing-system

./: .env  .tool-versions  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 229c8b5049f9_initial_migration.py
docs/: README.md
src/it_ticketing_system/: db.py  main.py
src/it_ticketing_system/controllers/: tickets.py  users.py
src/it_ticketing_system/dao/: __init__.py  ticket_dao.py  user_dao.py
src/it_ticketing_system/models/: __init__.py  base.py  ticket.py  user.py
src/it_ticketing_system/schemas/: ticket_schema.py  user_schema.py
